@@ -200,6 +200,15 @@ Causes your character to speak to one or more characters or mobs in \
 the same room as yourself.  You may specify the mob to speak to, \
 or just speak in general.
 
+ASSIST=\
+Command : ASSIST\n\r\
+Usage   : ASSIST ([MOB NAME])\n\r\
+Example : assist bob\n\r\
+Short(s): \n\r\
+If the target character is doing something that you can assist them with, \
+this will cause your character to do so.  This can include combat, as well \
+as certain building skills.
+
 AUCTION=\
 Command : AUCTION\n\r\
 Usage   : AUCTION UP [ITEM] ([OPENING BID])\n\r\
